fix horizontal scroll bar

--- a/src/styles/helpers/container.scss
+++ b/src/styles/helpers/container.scss
@@ -1,5 +1,6 @@
 .container {
   padding-inline: 20px;
+  overflow-x: hidden;
 
   @include onTablet {
     padding-inline: 72px;
