--- a/src/styles/layouts/footer.scss
+++ b/src/styles/layouts/footer.scss
@@ -4,7 +4,6 @@
   z-index: -1;
 
   height: 200px;
-  width: 100vw;
 
   background: url("../images/footer-background.jpg") no-repeat right;
   background-size: cover;
